fix modify station tooltips a bit
player lvl up token and config removed
try fix player vanilla lvls being wrong after teleporting to maps
changed config from common to server so it syncs automatically to clients. Transfered all configs to separate folder.
nerfed crit rate talents
nerfed wand aoe 
talent tree now reminds you which button to click to show more stat info

2.9.4
try fix wand crash
updated to latest forge
fix bug where time counts out for dimensions if you set their map tier to more than 0
lang update
2.9.3
updated to latest forge and curios
fixed open gl error spam hopefully
tweaked structure world gen code in maps a bit
updated chinese and korean lang
tweaked some profession costs
fixed crash on recall potion
2.9.2
updated chinese lang
updated some textures from clinton!
new item in alchemy station adds reset talent points. Right clicking a talent removes them if you have points

2.9.1
should fix talents crashing on servers

2.9.0

WARNING: Please delete mmorpg-common config or just delete the base stats and rarity droprates parts, otherwise you'll have troubles playing!

Added TALENTS!

Pressing *J* opens the talent tree. You can pick 4 locations to start with, which determine your speciality.
I call them mage, thief, guardian and warrior.

The tree is huge and every start point branches to the other. Although you need to spend some points to traverse it.

Mages specialize in mana, spell dmg and magic shield.
Thiefs in dodge, crits, energy and penetration.
Guardians in hp and defenses.
Warrior in phys dmg and crits.

To go along the big talent update, i added a few cool trait stats. Stuff like blood mage, which transforms your mana bar into a blood bar and such.


updated to latest forge and curios. v40 and v1.02

updated many stats to have icons for stat gui and talents gui.
added ondmgevent
added ele wep dmg stat.
some optimizations
dodge transformed into dodge rating. now scales to lvl
added magic shield stat