@@ -1,10 +1,18 @@
 package com.robertx22.mine_and_slash.blocks.map_device;
 
 import com.robertx22.mine_and_slash.blocks.bases.BaseInventoryBlock;
+import com.robertx22.mine_and_slash.saveclasses.item_classes.MapItemData;
+import com.robertx22.mine_and_slash.uncommon.datasaving.Map;
 import net.minecraft.block.BlockState;
 import net.minecraft.block.material.Material;
+import net.minecraft.entity.player.PlayerEntity;
+import net.minecraft.item.ItemStack;
 import net.minecraft.tileentity.TileEntity;
+import net.minecraft.util.Hand;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.BlockRayTraceResult;
 import net.minecraft.world.IBlockReader;
+import net.minecraft.world.World;
 
 public class BlockMapDevice extends BaseInventoryBlock {
 
@@ -16,6 +24,35 @@ public class BlockMapDevice extends BaseInventoryBlock {
     public TileEntity createTileEntity(BlockState state, IBlockReader world) {
 
         return new TileMapDevice();
+
+    }
+
+    @Override
+    public boolean onBlockActivated(BlockState state, World world, BlockPos pos,
+                                    PlayerEntity player, Hand hand,
+                                    BlockRayTraceResult ray) {
+
+        if (world.isRemote) {
+            return true;
+        }
+
+        TileEntity tile = world.getTileEntity(pos);
+
+        if (tile instanceof TileMapDevice) {
+            TileMapDevice map = (TileMapDevice) tile;
+
+            ItemStack stack = player.getHeldItemMainhand();
+
+            MapItemData mapdata = Map.Load(stack);
+
+            if (mapdata != null) {
+                map.sacrificeMap(player, mapdata, stack);
+                return true;
+            }
+
+        }
+
+        return super.onBlockActivated(state, world, pos, player, hand, ray);
 
     }
 
