@@ -1,7 +1,6 @@
 package com.robertx22.mine_and_slash.blocks.map_device;
 
 import com.robertx22.mine_and_slash.blocks.bases.BaseTileContainer;
-import com.robertx22.mine_and_slash.blocks.slots.NormalSlot;
 import com.robertx22.mine_and_slash.mmorpg.registers.common.ContainerTypeRegisters;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.entity.player.PlayerInventory;
@@ -17,14 +16,6 @@ public class ContainerMapDevice extends BaseTileContainer {
     private final int PLAYER_INVENTORY_COLUMN_COUNT = 9;
     private final int PLAYER_INVENTORY_SLOT_COUNT = PLAYER_INVENTORY_COLUMN_COUNT * PLAYER_INVENTORY_ROW_COUNT;
     private final int VANILLA_SLOT_COUNT = HOTBAR_SLOT_COUNT + PLAYER_INVENTORY_SLOT_COUNT;
-
-    // slot index is the unique index for all slots in this container i.e. 0 - 35
-    // for invPlayer then 36 - 49 for tileInventoryFurnace
-    private final int VANILLA_FIRST_SLOT_INDEX = 0;
-    private final int TIER_SLOT_INDEX = 0;
-    private final int LEVEL_SLOT_INDEX = 1;
-    private final int MAP_SLOT_INDEX = 2;
-    private final int START_SLOT_INDEX = 3;
 
     public static final int MAP_DEVICE_SLOTS_COUNT = 4;
 
@@ -57,23 +48,6 @@ public class ContainerMapDevice extends BaseTileContainer {
                 addSlot(new Slot(playerInventory, slotNumber, xpos, ypos));
             }
         }
-
-        // VANILLA END
-        final int TIER_X = 26;
-        final int TIER_Y = 85;
-        addSlot(new NormalSlot(inventory, TIER_SLOT_INDEX, TIER_X, TIER_Y));
-
-        final int LEVEL_X = 134;
-        final int LEVEL_Y = 85;
-        addSlot(new NormalSlot(inventory, LEVEL_SLOT_INDEX, LEVEL_X, LEVEL_Y));
-
-        final int MAP_X = 81;
-        final int MAP_Y = 28;
-        addSlot(new NormalSlot(inventory, MAP_SLOT_INDEX, MAP_X, MAP_Y));
-
-        final int START_X = 80;
-        final int START_Y = 99;
-        addSlot(new NormalSlot(inventory, START_SLOT_INDEX, START_X, START_Y));
 
     }
 
