@@ -118,10 +118,16 @@ public class StatRequirementsData {
 
     public boolean meetsRequirements(UnitData data, GearItemData gear) {
 
-        for (Map.Entry<String, Integer> entry : getReqs(gear).entrySet()) {
-            if (SlashRegistry.Stats().isRegistered(entry.getKey())) {
-                if (data.getUnit().getStat(entry.getKey()).Value < entry.getValue()) {
-                    return false;
+        if (data != null) {
+
+            for (Map.Entry<String, Integer> entry : getReqs(gear).entrySet()) {
+                if (SlashRegistry.Stats().isRegistered(entry.getKey())) {
+                    if (data.getUnit().getStat(entry.getKey()) != null) {
+                        if (data.getUnit()
+                                .getStat(entry.getKey()).Value < entry.getValue()) {
+                            return false;
+                        }
+                    }
                 }
             }
         }
